# py-sudoku

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
sudoku/: sudoku.py
